# hotdogornot

./: pyproject.toml
src/hotdog/: main.py  utils.py
tests/: test_max_p.py
